# hft-system

./: Cargo.toml  LICENSE  README.md  config.toml.example  快速入门指南.md
docs/: API文档.md  技术架构.md  项目概述.md
examples/: basic_usage.rs  market_making_demo.rs
scripts/: setup.sh
src/: lib.rs  main.rs
src/backtesting/: mod.rs
src/common/: data_normalizer.rs  mod.rs  orderbook.rs
src/data_ingestion/: binance.rs  binance_fixed.rs  gate.rs  gate_fixed.rs  mod.rs  okx.rs  okx_fixed.rs
src/monitoring/: mod.rs
src/oms/: binance_adapter.rs  exchange_adapter.rs  gate_adapter.rs  mod.rs  okx_adapter.rs
src/persistence/: database.rs  mod.rs
src/rms/: mod.rs
src/strategy_engine/: advanced_market_making.rs  market_making.rs  mod.rs  risk_controls.rs
tests/: exchange_integration_tests.rs  integration_tests.rs  order_system_integration_tests.rs  strategy_functional_tests.rs  strategy_integration_tests.rs  strategy_unit_tests.rs  unit_tests.rs
